# python-exec-agent

./: README.md  pyproject.toml
exec-python-in-tool/: .gitignore  README.md  pyproject.toml  temp_script.py
exec-python-in-tool/app/: agent.py  server.py  tools.py
