[tool.poetry]
name = "python-exec-agent"
version = "0.1.0"
description = ""
authors = ["cycling777 <github.cycling777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-cli = "^0.0.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
